@@ -1422,10 +1422,13 @@ try
 		);
 	end;
 	Sys.catch_break false;
-	if not !no_output then List.iter (fun c ->
-		let r = run_command ctx c in
-		if r <> 0 then failwith ("Command failed with error " ^ string_of_int r)
-	) (List.rev !cmds)
+	if not !no_output then begin
+		List.iter (fun f -> f()) (List.rev com.final_filters);
+		List.iter (fun c ->
+			let r = run_command ctx c in
+			if r <> 0 then failwith ("Command failed with error " ^ string_of_int r)
+		) (List.rev !cmds)
+	end
 with
 	| Abort ->
 		()
